updated bash aliases and added ssh config

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
     email = tyholling@gmail.com
 [core]
     autocrlf = input
+    safecrlf = false
 [color]
     diff = always
     status = always
