--- a/.ackrc
+++ b/.ackrc
@@ -1,5 +1,8 @@
+--break
+--color
 --color-filename=bright_red
 --color-lineno=bright_magenta
---color-match=on_blue
+--color-match=on_black
 --follow
---smart-case
+--heading
+--ignore-case
