updated vimrc and ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,3 +2,8 @@ Ciphers aes256-ctr
 Compression yes
 HashKnownHosts yes
 Protocol 2
+StrictHostKeyChecking no
+
+Host ide
+    HostName localhost
+    Port 9022
