--- a/.minttyrc
+++ b/.minttyrc
@@ -3,7 +3,7 @@ CopyAsRTF=no
 CursorBlinks=no
 CursorColour=192,192,192
 CursorType=underscore
-Font=Consolas
+Font=JetBrains Mono
 FontHeight=12
 Scrollbar=none
 Term=xterm-256color
