--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ set -g prefix C-a
 set -g mouse on
 
 # panes
-set -g pane-border-style "bg=colour0 fg=colour0"
-set -g pane-active-border-style "bg=colour0 fg=colour8"
+set -g pane-border-style "bg=color0 fg=color0"
+set -g pane-active-border-style "bg=color0 fg=color8"
 
 # split
 bind | split-window -h
