--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,32 @@
-# prefix
-set -g prefix C-a
+# clock
+set -g clock-mode-colour brightblack
 
 # mouse
 set -g mouse on
 
 # panes
-set -g pane-border-style "bg=colour0 fg=colour0"
-set -g pane-active-border-style "bg=colour0 fg=colour8"
+set -g pane-border-style "bg=black fg=black"
+set -g pane-active-border-style "bg=black fg=brightblack"
+
+# prefix
+set -g prefix C-a
 
 # split
 bind | split-window -h
 bind - split-window -v
 
 # status
-set -g status off
+set -g status on
+set -g status-bg brightblack
+set -g status-fg black
+set -g status-interval 1
+set -g status-justify centre
+set -g status-position top
+
+set -g status-left ""
+set -g status-left-length 0
+set -g status-right ""
+set -g status-right-length 0
+
+setw -g window-status-format "#[bg=black,fg=white]  %H:%M:%S  %F  "
+setw -g window-status-current-format "#[bg=black,fg=white]  %H:%M:%S  %F  "
