updated tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,5 +28,4 @@ set -g status-left-length 0
 set -g status-right ""
 set -g status-right-length 0
 
-setw -g window-status-format "#[bg=black,fg=white]  %H:%M:%S  %F  "
-setw -g window-status-current-format "#[bg=black,fg=white]  %H:%M:%S  %F  "
+setw -g window-status-current-format "#[bg=black,fg=white]  %H:%M:%S  %A  %F  #S  "
