--- a/.minttyrc
+++ b/.minttyrc
@@ -1,9 +1,13 @@
 BackgroundColour=20,20,20
+BoldAsColour=no
+BoldAsFont=no
 CopyAsRTF=no
+CopyOnSelect=no
 CursorBlinks=no
 CursorColour=255,255,255
 CursorType=underscore
-FontHeight=12
+Font=Consolas
+FontHeight=14
 ForegroundColour=255,255,255
 Scrollbar=none
 Term=xterm-256color
