updated aliases and tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,4 +28,4 @@ set -g status-left-length 0
 set -g status-right ""
 set -g status-right-length 0
 
-setw -g window-status-current-format "#[bg=black,fg=white]  %H:%M:%S  %A  %F  #S  "
+setw -g window-status-current-format "#[bg=black,fg=white]  #(date --utc +%%H:%%M:%%S)  %H:%M:%S  %A  %F  #S  "
