--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,10 +12,10 @@ set -g pane-active-border-style "bg=black fg=brightblack"
 set -g prefix C-a
 
 # split
-bind \ split-window -h
-bind | split-window -fh
-bind - split-window -v
-bind _ split-window -fv
+bind \\ split-window -h
+bind \| split-window -fh
+bind \- split-window -v
+bind \_ split-window -fv
 
 # status
 set -g status on
