--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,10 +12,10 @@ set -g pane-active-border-style "bg=black fg=brightblack"
 set -g prefix C-a
 
 # split
-bind \\ split-window -h
-bind \| split-window -fh
-bind \- split-window -v
-bind \_ split-window -fv
+bind '\' split-window -c "#{pane_current_path}" -h
+bind '|' split-window -c "#{pane_current_path}" -fh
+bind '-' split-window -c "#{pane_current_path}" -v
+bind '_' split-window -c "#{pane_current_path}" -fv
 
 # status
 set -g status on
@@ -30,4 +30,4 @@ set -g status-left-length 0
 set -g status-right ""
 set -g status-right-length 0
 
-setw -g window-status-current-format "#[bg=black,fg=white]  %H:%M:%S  %A  %F  #(date -u +%%H:%%M:%%S)  "
+setw -g window-status-current-format "#[bg=black,fg=white]  %Z  %H:%M:%S  %A  %F  #(date -u +%%H:%%M:%%S\\ \\ %%Z)  "
