--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,8 @@
+Ciphers aes128-ctr
 Compression yes
 ConnectTimeout 1
 HashKnownHosts yes
-StrictHostKeyChecking no
 
 Host dev
-HostName localhost
+HostName 192.168.0.11
 User root
