--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,8 @@
-Ciphers aes128-ctr
+Ciphers aes256-ctr
 Compression yes
 ConnectTimeout 1
 HashKnownHosts yes
 
 Host dev
-HostName 192.168.0.11
+HostName fedora
 User root
