updated ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,7 +2,10 @@ Ciphers aes256-ctr
 Compression yes
 ConnectTimeout 1
 HashKnownHosts yes
+StrictHostKeyChecking no
 
-Host dev
-HostName fedora
+Host fedora
+User root
+
+Host ubuntu
 User root
