updated ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,8 +4,8 @@ ConnectTimeout 1
 HashKnownHosts yes
 StrictHostKeyChecking no
 
-Host fedora
+Host debian
 User root
 
-Host ubuntu
+Host fedora
 User root
