updated tmux colors and vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ set -g clock-mode-colour brightblack
 set -g mouse on
 
 # panes
-set -g pane-border-style "bg=black fg=black"
-set -g pane-active-border-style "bg=black fg=brightblack"
+set -g pane-border-style "bg=color16 fg=color16"
+set -g pane-active-border-style "bg=color16 fg=color239"
 
 # prefix
 set -g prefix C-a
@@ -19,8 +19,8 @@ bind '_' split-window -c "#{pane_current_path}" -fv
 
 # status
 set -g status on
-set -g status-bg brightblack
-set -g status-fg black
+set -g status-bg color239
+set -g status-fg color251
 set -g status-interval 1
 set -g status-justify centre
 set -g status-position top
@@ -30,4 +30,4 @@ set -g status-left-length 0
 set -g status-right ""
 set -g status-right-length 0
 
-setw -g window-status-current-format "#[bg=black,fg=white]  %Z  %H:%M:%S  %A  %F  #(date -u +%%H:%%M:%%S\\ \\ %%Z)  "
+setw -g window-status-current-format "#[bg=color16,fg=color251]  %Z  %H:%M:%S  %A  %F  #(date -u +%%H:%%M:%%S\\ \\ %%Z)  "
