updated tmux colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,11 @@
 # clock
-set -g clock-mode-colour brightblack
+set -g clock-mode-colour color239
 
 # mouse
 set -g mouse on
 
 # panes
-set -g pane-border-style "bg=color16 fg=color16"
+set -g pane-border-style "bg=color16 fg=color239"
 set -g pane-active-border-style "bg=color16 fg=color239"
 
 # prefix
