updated ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,3 +3,18 @@ Compression yes
 ConnectTimeout 1
 HashKnownHosts yes
 StrictHostKeyChecking no
+
+Host debian
+User root
+
+Host fedora
+User root
+
+Host oracle
+User root
+
+Host photon
+User root
+
+Host ubuntu
+User root
