updated ssh config and vimrc

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,16 +4,31 @@ ConnectTimeout 1
 StrictHostKeyChecking no
 
 Host debian
+HostName localhost
+Port 60422
 User root
 
 Host fedora
+HostName localhost
+Port 60622
 User root
 
 Host oracle
+HostName localhost
+Port 61522
 User root
 
 Host photon
+HostName localhost
+Port 61622
+User root
+
+Host redhat
+HostName localhost
+Port 61822
 User root
 
 Host ubuntu
+HostName localhost
+Port 62122
 User root
