--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,11 @@ Compression yes
 ConnectTimeout 1
 StrictHostKeyChecking no
 
+Host centos
+HostName localhost
+Port 60322
+User root
+
 Host debian
 HostName localhost
 Port 60422
@@ -11,21 +16,6 @@ User root
 Host fedora
 HostName localhost
 Port 60622
-User root
-
-Host oracle
-HostName localhost
-Port 61522
-User root
-
-Host photon
-HostName localhost
-Port 61622
-User root
-
-Host redhat
-HostName localhost
-Port 61822
 User root
 
 Host ubuntu
