--- a/.inputrc
+++ b/.inputrc
@@ -2,3 +2,5 @@ set bell-style none
 set completion-ignore-case on
 set completion-map-case on
 set enable-bracketed-paste on
+set revert-all-at-newline on
+set skip-completed-text on
