update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,3 +2,23 @@ Ciphers aes256-ctr
 Compression yes
 HostKeyAlgorithms ssh-ed25519
 StrictHostKeyChecking no
+
+Host coreos
+HostName localhost
+Port 60322
+User root
+
+Host debian
+HostName localhost
+Port 60422
+User root
+
+Host fedora
+HostName localhost
+Port 60622
+User root
+
+Host ubuntu
+HostName localhost
+Port 62122
+User root
