--- a/.inputrc
+++ b/.inputrc
@@ -1,6 +1,7 @@
 set bell-style none
 set completion-ignore-case on
 set completion-map-case on
+set editing-mode vi
 set enable-bracketed-paste on
 set revert-all-at-newline on
 set skip-completed-text on
