--- a/.ssh/config
+++ b/.ssh/config
@@ -3,7 +3,7 @@ Compression yes
 HostKeyAlgorithms ssh-ed25519
 StrictHostKeyChecking no
 
-Host coreos
+Host centos
 HostName localhost
 Port 60322
 User root
