update tmux and vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ bind '_' split-window -c "#{pane_current_path}" -fv
 
 # status
 set -g status on
-set -g status-bg color239
+set -g status-bg color16
 set -g status-fg color251
 set -g status-interval 1
 set -g status-justify centre
@@ -33,4 +33,4 @@ set -g status-left-length 0
 set -g status-right ""
 set -g status-right-length 0
 
-setw -g window-status-current-format "#[bg=color16,fg=color251]  %Z  %H:%M:%S  %A  %F  #(date -u +%%H:%%M:%%S\\ \\ %%Z)  "
+setw -g window-status-current-format "#[bg=color16,fg=color251]  %Z  %H:%M:%S  %A  %F  #(TZ=Asia/Tokyo date +%%H:%%M:%%S\\ \\ %%Z)  "
