update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,21 +4,17 @@ HostKeyAlgorithms ssh-ed25519
 StrictHostKeyChecking no
 
 Host centos
-HostName localhost
-Port 60322
+HostName 192.168.64.3
 User root
 
 Host debian
-HostName localhost
-Port 60422
+HostName 192.168.64.4
 User root
 
 Host fedora
-HostName localhost
-Port 60622
+HostName 192.168.64.6
 User root
 
 Host ubuntu
-HostName localhost
-Port 62122
+HostName 192.168.64.21
 User root
