--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,4 +33,8 @@ set -g status-left-length 0
 set -g status-right ""
 set -g status-right-length 0
 
-setw -g window-status-current-format "#[bg=color16,fg=color251]  %Z  %H:%M:%S  %A  %F  #(TZ=Asia/Tokyo date +%%H:%%M:%%S\\ \\ %%Z)  "
+setw -g window-status-current-format "#[bg=color16,fg=color251]  %Z  %H:%M:%S  %A  %F  #(date -u +%%H:%%M:%%S\\ \\ %%Z)  "
+
+# window
+bind -n S-Left previous-window
+bind -n S-Right next-window
