--- a/settings.json
+++ b/settings.json
@@ -1,27 +1,48 @@
 {
-  "breadcrumbs.enabled": false,
   "editor.cursorBlinking": "solid",
-  "editor.fontSize": 16,
   "editor.minimap.enabled": false,
-  "editor.renderLineHighlight": "all",
   "editor.rulers": [
     100
   ],
+  "continue.enableTabAutocomplete": true,
   "editor.scrollbar.horizontal": "hidden",
   "editor.scrollbar.vertical": "hidden",
-  "editor.tabSize": 2,
+  "editor.tabSize": 4,
+  "editor.suggest.showFunctions": false,
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "telemetry.telemetryLevel": "off",
   "vim.cursorStylePerMode.insert": "underline-thin",
   "vim.cursorStylePerMode.normal": "underline-thin",
-  "workbench.activityBar.visible": false,
-  "workbench.colorTheme": "Default Dark+",
-  "workbench.editor.showTabs": false,
+  "workbench.editor.showTabs": "none",
   "workbench.layoutControl.enabled": false,
   "workbench.startupEditor": "none",
   "workbench.colorCustomizations": {
     "editor.lineHighlightBackground": "#000000",
     "statusBar.background": "#000000"
-  }
+  },
+  "workbench.editor.empty.hint": "hidden",
+  "terminal.integrated.cursorStyle": "underline",
+  "go.formatTool": "gofumpt",
+  "go.lintTool": "revive",
+  "continue.telemetryEnabled": false,
+  "workbench.activityBar.location": "top",
+  "editor.matchBrackets": "never",
+  "chat.commandCenter.enabled": false,
+  "window.title": "${activeEditorMedium}${separator}${rootName}${separator}${profileName}",
+  "continue.showInlineTip": false,
+  "workbench.editor.editorActionsLocation": "hidden",
+  "workbench.tips.enabled": false,
+  "editor.stickyScroll.enabled": false,
+  "workbench.navigationControl.enabled": false,
+  "window.commandCenter": false,
+  "window.customTitleBarVisibility": "never",
+  "window.titleBarStyle": "native",
+  "editor.folding": false,
+  "editor.renderLineHighlight": "all",
+  "editor.inlayHints.enabled": "off",
+  "problems.visibility": false,
+  "breadcrumbs.enabled": false,
+  "scm.diffDecorations": "none",
+  "editor.hideCursorInOverviewRuler": true
 }
