--- a/settings.json
+++ b/settings.json
@@ -1,27 +1,68 @@
 {
   "breadcrumbs.enabled": false,
+  "chat.commandCenter.enabled": false,
+  "continue.enableTabAutocomplete": true,
+  "continue.showInlineTip": false,
+  "continue.telemetryEnabled": false,
+  "editor.autoClosingBrackets": "never",
+  "editor.autoClosingQuotes": "never",
+  "editor.bracketPairColorization.enabled": false,
   "editor.cursorBlinking": "solid",
-  "editor.fontSize": 16,
+  "editor.folding": false,
+  "editor.fontVariations": false,
+  "editor.glyphMargin": false,
+  "editor.hideCursorInOverviewRuler": true,
+  "editor.inlayHints.enabled": "off",
+  "editor.matchBrackets": "never",
   "editor.minimap.enabled": false,
+  "editor.overviewRulerBorder": false,
+  "editor.parameterHints.enabled": false,
   "editor.renderLineHighlight": "all",
   "editor.rulers": [
     100
   ],
   "editor.scrollbar.horizontal": "hidden",
   "editor.scrollbar.vertical": "hidden",
-  "editor.tabSize": 2,
+  "editor.snippetSuggestions": "none",
+  "editor.stickyScroll.enabled": false,
+  "editor.suggest.showFunctions": false,
+  "editor.tabSize": 4,
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "go.enableCodeLens": {
+    "runtest": false
+  },
+  "go.formatTool": "gofumpt",
+  "go.lintOnSave": "off",
+  "go.lintTool": "golint",
+  "go.testExplorer.enable": false,
+  "problems.visibility": false,
+  "python.analysis.typeCheckingMode": "basic",
+  "scm.diffDecorations": "gutter",
   "telemetry.telemetryLevel": "off",
+  "terminal.integrated.cursorStyle": "underline",
   "vim.cursorStylePerMode.insert": "underline-thin",
   "vim.cursorStylePerMode.normal": "underline-thin",
-  "workbench.activityBar.visible": false,
-  "workbench.colorTheme": "Default Dark+",
-  "workbench.editor.showTabs": false,
-  "workbench.layoutControl.enabled": false,
-  "workbench.startupEditor": "none",
+  "vim.useSystemClipboard": true,
+  "window.commandCenter": false,
+  "window.customTitleBarVisibility": "never",
+  "window.density.editorTabHeight": "compact",
+  "window.nativeFullScreen": false,
+  "window.title": "${activeEditorMedium}${separator}${rootName}${separator}${profileName}",
+  "window.titleBarStyle": "custom",
+  "workbench.activityBar.location": "hidden",
   "workbench.colorCustomizations": {
     "editor.lineHighlightBackground": "#000000",
+    "editorGroupHeader.noTabsBackground": "#000000",
     "statusBar.background": "#000000"
-  }
+  },
+  "workbench.editor.editorActionsLocation": "hidden",
+  "workbench.editor.empty.hint": "hidden",
+  "workbench.editor.labelFormat": "short",
+  "workbench.editor.showTabs": "single",
+  "workbench.layoutControl.enabled": false,
+  "workbench.navigationControl.enabled": false,
+  "workbench.startupEditor": "none",
+  "workbench.tips.enabled": false
 }
